--- a/pom.xml
+++ b/pom.xml
@@ -9,20 +9,26 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.1</version>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
+  		  <groupId>org.apache.maven.plugins</groupId>
+  		  <artifactId>maven-assembly-plugin</artifactId>
+  		  <configuration>
+  		    <descriptorRefs>
+  		      <descriptorRef>jar-with-dependencies</descriptorRef>
+  		    </descriptorRefs>
+  		    <archive>
+  		    </archive>
+  		  </configuration>
+  		  <executions>
+  		    <execution>
+  		      <id>package-jar-with-dependencies</id>
+  		      <phase>package</phase>
+  		      <goals>
+  		        <goal>single</goal>
+      		  </goals>
+     		 </execution>
+  		  </executions>
+  		</plugin>
+      <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
